fix mobile overflow in acceptance surfaces

--- a/apps/web/app/projects/[id]/2d-upgrade/project-2d-upgrade-game.module.css
+++ b/apps/web/app/projects/[id]/2d-upgrade/project-2d-upgrade-game.module.css
@@ -2015,6 +2015,18 @@
     width: calc(100vw - 20px);
   }
 
+  .serviceHealthBar {
+    grid-template-columns: 1fr;
+  }
+
+  .serviceHealthBar dl {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .serviceHealthBar dd {
+    white-space: normal;
+  }
+
   .statusStrip {
     left: 10px;
     right: 10px;
