--- a/apps/web/app/projects/[id]/workbench/workbench.module.css
+++ b/apps/web/app/projects/[id]/workbench/workbench.module.css
@@ -1610,6 +1610,17 @@
     width: 100%;
     max-height: none;
   }
+  .dispatchEvidenceStrip {
+    grid-template-columns: auto minmax(0, 1fr);
+    align-items: flex-start;
+  }
+  .dispatchEvidenceMetrics {
+    grid-column: 1 / -1;
+    justify-content: flex-start;
+  }
+  .dispatchEvidenceMain small {
+    white-space: normal;
+  }
   .toolRail {
     display: none;
   }
